...
            """.trimIndent()
            
            Log.d(TAG, "获取到天气数据: $mockWeatherData")
            mockWeatherData
        } catch (e: Exception) {
            Log.e(TAG, "获取天气数据时出错", e)
            null
        }
    }
    
    /**
     * 从网络获取天气数据
     * @param latitude 纬度
...
